--- a/src/index.css
+++ b/src/index.css
@@ -5,12 +5,12 @@
 @tailwind utilities;
 
 body {
-  @apply bg-[#111] text-gray-300 font-inter;
+  @apply bg-white text-gray-900 font-inter;
 }
 
 @layer components {
   .sub-menu {
-    @apply absolute top-[4.2rem] p-[15px] rounded-[6px] origin-[50%_-170px] backdrop-blur bg-white/[0.04];
+    @apply absolute top-[4.2rem] p-[15px] rounded-[6px] origin-[50%_-170px] backdrop-blur bg-white z-[99999];
   }
 }
 
