--- a/src/index.css
+++ b/src/index.css
@@ -26,7 +26,7 @@ body {
   }
 
   .theme-button {
-    @apply text-white relative shadow rounded-md flex items-center justify-center transition-all duration-300 hover:shadow-lg hover:translate-y-[-2px] active:translate-y-0 font-semibold;
+    @apply text-white relative shadow rounded-md flex items-center justify-center transition-all duration-300 hover:shadow-lg hover:bg-opacity-80 font-semibold;
   }
 }
 
